Add sign out button.

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Photódex</title>
+  <!-- Font Awesome CDN -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 </head>
 
 <body>
