--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <title>Photódex</title>
   <!-- Font Awesome CDN -->
-  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <script src="https://use.fontawesome.com/fa45565085.js"></script>
 </head>
 
 <body>
